# nfc-bindings

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  nfc.i
.github/workflows/: build.yml
cmake/: FindLibNFC.cmake  TargetLinkLibrariesWithDynamicLookup.cmake
python/: CMakeLists.txt  python_wrapping.c  python_wrapping.h
python/examples/: CMakeLists.txt  nfc-anticol.py  nfc-dep-target.py  nfc-list.py  quick_start_example.py
